调整写法和增加Quartz的串行执行功能